--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: APT0xSnowdox # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the sub-title
 
-description: >- Hi # used by seo meta and the atom feed
+description: > Hi # used by seo meta and the atom feed
 
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
