--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: APT0xSnowdox # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the sub-title
 
-description: >  # used by seo meta and the atom feed
+description: > # used by seo meta and the atom feed
   Hi hello.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
@@ -76,7 +76,7 @@ theme_mode: dark # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "assets/anime.png"
+avatar: #"assets/anime.png"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
