--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: > # used by seo meta and the atom feed
   Hi hello.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://nathanealm.github.io"
 
 github:
   username: nathanealm # change to your github username
@@ -76,7 +76,7 @@ theme_mode: dark # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: #"assets/anime.png"
+avatar: "/assets/anime.png"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
